@@ -9,6 +9,7 @@ Alpha0.3.0
 - Updated README.md, removing known bug 'GUI not showing'
 - Added support for EconomyPlus (Prisoner bail function)
 - Added support for individual jail bail status (Allow bailing?)
+- Default time unit is now customizable in configuration file
 
 Alpha0.2.3
 - Fixed '/votejail' command not working for normal players
